fixed a the main tittle and button in dark mode

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -13,8 +13,15 @@
   background-image: url(../../static/img/hero-background/Gradient-Banner.png);
   background-repeat: no-repeat;
   background-size: cover;
-  color: #ffff;
   font-family: 'Figtree', sans-serif;
+}
+
+[data-theme='dark'] .heroBanner {
+  color: #ffff;
+}
+
+[data-theme='light'] .heroBanner {
+  color: #1c1c1c;
 }
 
 .title {
@@ -66,21 +73,27 @@
 }
 
 .secondaryButton {
-  background-color: transparent !important;
-  color: #ffffff;
-  border: 1px solid #ffffff;
+  background-color: transparent;
   padding: 0.8rem 1.25rem;
   border-radius: 6px;
   transition: all 0.3s ease-in-out;
   font-family: 'Figtree', sans-serif;
   font-size: 0.9375rem;
   font-weight: 700;
-  border-color: #ffffff;
-  margin-left: 10px;
   text-transform: uppercase;
   line-height: 1.5;
   text-align: center;
   vertical-align: middle;
+}
+
+[data-theme='dark'] .secondaryButton {
+  color: #ffffff;
+  border: 1px solid #ffffff;
+}
+
+[data-theme='light'] .secondaryButton {
+  color: #1c1c1c;
+  border: 1px solid #1c1c1c;
 }
 
 .secondaryButton:hover {
